--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center " >
-                <button type="button" class=" load-more  w-25 m-4" >Load More >></button>
+                <button type="button" class=" load-more  w-25 m-4" >Load More</button>
             </div>
         </div>
     </div>
